--- a/ui-components/src/overlays/Modal.scss
+++ b/ui-components/src/overlays/Modal.scss
@@ -38,7 +38,7 @@
 }
 
 .modal__title {
-  padding: var(--bloom-s6) var(--bloom-s6) 0 var(--bloom-s6);
+  padding: var(--bloom-s6) var(--bloom-s12) 0 var(--bloom-s6);
   color: var(--title-color);
   font-size: var(--title-font-size);
   font-family: var(--title-font-family);
